Main-panel overflow fix

--- a/WardrobeThreads/src/app/_components/main-panel/main-panel.component.scss
+++ b/WardrobeThreads/src/app/_components/main-panel/main-panel.component.scss
@@ -1,5 +1,4 @@
 .main {
-    width: 100vw;
     height: 70vh;
     background-color: #505A5B;
 }
